fix welcome page photo

--- a/MyKnee/res/layout/fragment_welcome_second_user.xml
+++ b/MyKnee/res/layout/fragment_welcome_second_user.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:contentDescription="@string/title"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo1" />
 
         <TextView
             style="@style/information_small"
