--- a/MyKnee/res/layout/fragment_welcome_first_user.xml
+++ b/MyKnee/res/layout/fragment_welcome_first_user.xml
@@ -27,7 +27,7 @@
         <ImageView 
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:src="@drawable/logo"
+            android:src="@drawable/logo1"
             android:contentDescription="@string/title"/>
 
         <TextView
