--- a/MyKnee/res/layout/fragment_welcome_first_user.xml
+++ b/MyKnee/res/layout/fragment_welcome_first_user.xml
@@ -2,50 +2,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="horizontal"
-    android:weightSum="10"
-    android:gravity="center" >
-    
+    android:weightSum="10" >
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="8"
-        android:orientation="vertical">
+        android:orientation="vertical" >
 
         <TextView
+            style="@style/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/title"
             android:text="@string/title" />
 
         <TextView
+            style="@style/information_small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/information_small"
             android:layout_marginBottom="10dp"
             android:text="@string/welcome_question" />
 
-        <ImageView 
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:src="@drawable/logo1"
-            android:contentDescription="@string/title"/>
+            android:contentDescription="@string/title"
+            android:src="@drawable/logo1" />
 
         <TextView
+            style="@style/information_small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/information_small"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:text="@string/welcome_slogan" />
 
         <Button
             android:id="@+id/button_welcome_first_done"
+            style="@style/button_guide"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/button_guide"
-            android:text="@string/welcome_button"/>
+            android:text="@string/welcome_button" />
     </LinearLayout>
-    
 
 </LinearLayout>
