--- a/MyKnee/res/layout/fragment_welcome_second_user.xml
+++ b/MyKnee/res/layout/fragment_welcome_second_user.xml
@@ -8,8 +8,8 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
         android:layout_weight="8"
+        android:layout_height="match_parent"
         android:orientation="vertical" >
 
         <TextView
@@ -22,6 +22,7 @@
             style="@style/information_small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="@string/welcome_question" />
 
         <ImageView
@@ -34,6 +35,8 @@
             style="@style/information_small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:text="@string/welcome_slogan" />
 
         <Button
@@ -43,16 +46,6 @@
             android:layout_height="wrap_content"
             android:text="@string/measure_my_knee" />
 
-        <TextView
-            android:layout_width="7dp"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/button_welcome_second_review"
-            style="@style/button_guide"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/review_progress" />
     </LinearLayout>
 
 </LinearLayout>
