--- a/MyKnee/res/layout/fragment_view_my_progress.xml
+++ b/MyKnee/res/layout/fragment_view_my_progress.xml
@@ -17,7 +17,8 @@
             style="@style/information_middle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
 
         <FrameLayout
             android:layout_width="match_parent"
