--- a/MyKnee/res/layout-320x240/fragment_view_my_progress.xml
+++ b/MyKnee/res/layout-320x240/fragment_view_my_progress.xml
@@ -15,6 +15,7 @@
         <TextView
             android:id="@+id/textview_total_measurement"
             style="@style/information_middle"
+            android:textSize="18sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -22,7 +23,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp">
+            android:layout_height="250dp">
 
             <ListView
                 android:id="@+id/listview_total_measurement"
