--- a/MyKnee/res/layout-320x240/fragment_interactive_method.xml
+++ b/MyKnee/res/layout-320x240/fragment_interactive_method.xml
@@ -14,6 +14,7 @@
 
         <TextView
             style="@style/title"
+            android:textSize="25sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title" />
@@ -21,15 +22,17 @@
         <Button
             android:id="@+id/button_delete_profile"
             style="@style/button_guide"
+            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:background="#ff0000"
             android:text="@string/delete_profile" />
 
         <Button
             android:id="@+id/button_delete_progress"
             style="@style/button_guide"
+            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -40,7 +43,7 @@
             style="@style/information_small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="4dp"
             android:text="@string/output" />
 
         <LinearLayout
@@ -51,6 +54,7 @@
 
             <TextView
                 style="@style/hint_big"
+                android:textSize="18sp"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/tts" />
@@ -58,28 +62,31 @@
             <Button
                 android:id="@+id/button_tts_on"
                 style="@style/button_setted"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:layout_marginLeft="20dp"
                 android:text="@string/on" />
 
             <Button
                 android:id="@+id/button_tts_off"
                 style="@style/button_unset"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:text="@string/off" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:orientation="horizontal" >
 
             <TextView
                 style="@style/hint_big"
+                android:textSize="18sp"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/vibrate" />
@@ -87,16 +94,18 @@
             <Button
                 android:id="@+id/button_vibrate_on"
                 style="@style/button_setted"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:layout_marginLeft="20dp"
                 android:text="@string/on" />
 
             <Button
                 android:id="@+id/button_vibrate_off"
                 style="@style/button_unset"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:text="@string/off" />
         </LinearLayout>
 
@@ -104,7 +113,7 @@
             style="@style/information_small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="4dp"
             android:text="@string/input" />
 
         <LinearLayout
@@ -115,6 +124,7 @@
 
             <TextView
                 style="@style/hint_big"
+                android:textSize="18sp"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/button" />
@@ -122,28 +132,31 @@
             <Button
                 android:id="@+id/button_button_on"
                 style="@style/button_setted"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:layout_marginLeft="20dp"
                 android:text="@string/on" />
 
             <Button
                 android:id="@+id/button_button_off"
                 style="@style/button_unset"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:text="@string/off" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:orientation="horizontal" >
 
             <TextView
                 style="@style/hint_big"
+                android:textSize="18sp"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/gesture" />
@@ -151,28 +164,31 @@
             <Button
                 android:id="@+id/button_gesture_on"
                 style="@style/button_setted"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:layout_marginLeft="20dp"
                 android:text="@string/on" />
 
             <Button
                 android:id="@+id/button_gesture_off"
                 style="@style/button_unset"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:text="@string/off" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:orientation="horizontal" >
 
             <TextView
                 style="@style/hint_big"
+                android:textSize="18sp"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/clock" />
@@ -180,16 +196,18 @@
             <Button
                 android:id="@+id/button_clock_on"
                 style="@style/button_setted"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:layout_marginLeft="20dp"
                 android:text="@string/on" />
 
             <Button
                 android:id="@+id/button_clock_off"
                 style="@style/button_unset"
+                android:textSize="18sp"
                 android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:layout_height="23dp"
                 android:text="@string/off" />
         </LinearLayout>
 
@@ -198,7 +216,7 @@
             style="@style/button_guide"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:text="@string/button_ready_to_measure" />
     </LinearLayout>
 
