--- a/MyKnee/res/layout-320x240/fragment_tutorial.xml
+++ b/MyKnee/res/layout-320x240/fragment_tutorial.xml
@@ -15,6 +15,7 @@
     
 	    <TextView
 	            style="@style/information_big"
+	            android:textSize="20sp"
 	            android:id="@+id/textview_turotial_title"
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
@@ -25,11 +26,12 @@
 	    <ImageView 
 	       	 	android:id="@+id/imageview_tutorial"
 	        	android:layout_width="match_parent"
-	        	android:layout_height="300dp"
+	        	android:layout_height="180dp"
 	        	android:src="@drawable/tutorial_1"/>
 	    
 	     <TextView
 	            style="@style/information_small"
+	            android:textSize="16sp"
 	            android:id="@+id/textview_turotial_description"
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
