--- a/MyKnee/res/layout-320x240/fragment_user_profile.xml
+++ b/MyKnee/res/layout-320x240/fragment_user_profile.xml
@@ -14,6 +14,7 @@
 
         <TextView
             style="@style/title"
+            android:textSize="25sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title" />
@@ -22,11 +23,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal" >
 
             <TextView
                 style="@style/hint_big"
+                android:textSize="18sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 
@@ -35,23 +37,26 @@
             <Button
                 android:id="@+id/button_increase_age"
                 style="@style/button_unset"
-                android:layout_width="45dp"    
-                android:layout_height="35dp"
+                android:textSize="13sp"
+                android:layout_width="50dp"    
+                android:layout_height="25dp"
                 android:layout_marginLeft="20dp"
                 android:text="@string/plus" />
 
             <TextView
                 android:id="@+id/text_view_age"
                 style="@style/data_small"
+                android:textSize="13sp"
                 android:layout_width="50dp"
-                android:layout_height="35dp"
+                android:layout_height="25dp"
                 android:text="@string/default_age" />
 
             <Button
                 android:id="@+id/button_decrease_age"
                 style="@style/button_unset"
-                android:layout_width="45dp"
-                android:layout_height="35dp"
+                android:textSize="13sp"
+                android:layout_width="50dp"
+                android:layout_height="25dp"
                 android:text="@string/minus" />
         </LinearLayout>
 
@@ -64,6 +69,7 @@
 
             <TextView
                 style="@style/hint_big"
+                android:textSize="18sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sex" />
@@ -71,21 +77,24 @@
             <Button
                 android:id="@+id/button_male"
                 style="@style/button_setted"
-                android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:textSize="13sp"
+                android:layout_width="75dp"
+                android:layout_height="25dp"
                 android:layout_marginLeft="20dp"
                 android:text="@string/male" />
 
             <Button
                 android:id="@+id/button_female"
                 style="@style/button_unset"
-                android:layout_width="70dp"
-                android:layout_height="35dp"
+                android:textSize="13sp"
+                android:layout_width="75dp"
+                android:layout_height="25dp"
                 android:text="@string/female" />
         </LinearLayout>
 
         <TextView
             style="@style/information_small"
+            android:textSize="16sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -100,21 +109,24 @@
             <Button
                 android:id="@+id/button_is_surgery"
                 style="@style/button_setted"
-                android:layout_width="100dp"
-                android:layout_height="35dp"
+                android:textSize="18sp"
+                android:layout_width="80dp"
+                android:layout_height="25dp"
                 android:text="@string/surgery_yes" />
 
             <Button
                 android:id="@+id/button_no_surgery"
                 style="@style/button_unset"
-                android:layout_width="100dp"
-                android:layout_height="35dp"
+                android:textSize="18sp"
+                android:layout_width="80dp"
+                android:layout_height="25dp"
                 android:text="@string/surgery_not" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/text_view_surgery_time_question"
             style="@style/information_small"
+            android:textSize="16sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -123,6 +135,7 @@
         <TextView
             android:id="@+id/text_view_surgery_time"
             style="@style/data_big"
+            android:textSize="18sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/default_surgery_time" />
@@ -130,6 +143,7 @@
         <TextView
             android:id="@+id/text_view_surgery_knee_question"
             style="@style/information_small"
+            android:textSize="16sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -145,23 +159,26 @@
             <Button
                 android:id="@+id/button_surgery_left"
                 style="@style/button_setted"
+                android:textSize="18sp"
                 android:layout_width="73dp"
-                android:layout_height="35dp"
+                android:layout_height="25dp"
                 android:text="@string/left" />
 
             <Button
                 android:id="@+id/button_surgery_both"
                 style="@style/button_unset"
+                android:textSize="18sp"
                 android:layout_width="73dp"
-                android:layout_height="35dp"
+                android:layout_height="25dp"
                 android:layout_marginLeft="2dp"
                 android:text="@string/both" />
 
             <Button
                 android:id="@+id/button_surgery_right"
                 style="@style/button_unset"
+                android:textSize="18sp"
                 android:layout_width="73dp"
-                android:layout_height="35dp"
+                android:layout_height="25dp"
                 android:layout_marginLeft="2dp"
                 android:text="@string/right" />
         </LinearLayout>
@@ -169,7 +186,8 @@
         <Button
             android:id="@+id/button_profile_done"
             style="@style/button_guide"
-            android:layout_marginTop="20dp"
+            android:textSize="25sp"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/button_ready_to_measure" />
