--- a/MyKnee/res/layout-320x240/fragment_welcome_second_user.xml
+++ b/MyKnee/res/layout-320x240/fragment_welcome_second_user.xml
@@ -14,6 +14,7 @@
 
         <TextView
             style="@style/title"
+            android:textSize="25sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title" />
@@ -27,7 +28,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="150dp"
             android:contentDescription="@string/title"
             android:src="@drawable/logo1" />
 
