--- a/MyKnee/res/layout-320x240/fragment_measure_method.xml
+++ b/MyKnee/res/layout-320x240/fragment_measure_method.xml
@@ -15,8 +15,7 @@
         <TextView
             style="@style/title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/title" />
+            android:layout_height="wrap_content" />
 
         <ImageView
             android:id="@+id/image_view_on_stomach"
