--- a/MyKnee/res/layout-320x240/fragment_user_profile.xml
+++ b/MyKnee/res/layout-320x240/fragment_user_profile.xml
@@ -17,7 +17,7 @@
             android:textSize="25sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/title" />
+            android:text="@string/profile" />
 
         <LinearLayout
             android:layout_width="match_parent"
