--- a/MyKnee/res/layout-320x240/fragment_welcome_second_user.xml
+++ b/MyKnee/res/layout-320x240/fragment_welcome_second_user.xml
@@ -13,14 +13,8 @@
         android:orientation="vertical" >
 
         <TextView
-            style="@style/title"
-            android:textSize="25sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/title" />
-
-        <TextView
-            style="@style/information_small"
+            style="@style/information_big"
+            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
