--- a/MyKnee/res/layout/fragment_user_profile.xml
+++ b/MyKnee/res/layout/fragment_user_profile.xml
@@ -16,7 +16,7 @@
             style="@style/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/title" />
+            android:text="@string/profile" />
 
         <LinearLayout
             android:layout_width="match_parent"
