--- a/MyKnee/res/layout/fragment_welcome_first_user.xml
+++ b/MyKnee/res/layout/fragment_welcome_first_user.xml
@@ -13,13 +13,7 @@
         android:orientation="vertical" >
 
         <TextView
-            style="@style/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/title" />
-
-        <TextView
-            style="@style/information_small"
+            style="@style/information_big"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
