--- a/MyKnee/res/layout-320x240/fragment_interactive_method.xml
+++ b/MyKnee/res/layout-320x240/fragment_interactive_method.xml
@@ -22,9 +22,9 @@
         <Button
             android:id="@+id/button_delete_profile"
             style="@style/button_guide"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="25sp"
             android:layout_marginTop="8dp"
             android:background="#ff0000"
             android:text="@string/delete_profile" />
@@ -32,9 +32,9 @@
         <Button
             android:id="@+id/button_delete_progress"
             style="@style/button_guide"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="25sp"
             android:layout_marginTop="8dp"
             android:background="#ff6932"
             android:text="@string/delete_progress" />
