--- a/MyKnee/res/layout-1024x600/fragment_welcome_second_user.xml
+++ b/MyKnee/res/layout-1024x600/fragment_welcome_second_user.xml
@@ -13,10 +13,11 @@
         android:orientation="vertical" >
 
         <TextView
-            style="@style/information_big"
+            style="@style/information_middle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="15dp"
+	        android:layout_marginBottom="10dp"
             android:text="@string/welcome_question" />
 
         <ImageView
@@ -29,7 +30,7 @@
             style="@style/information_small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="25dp"
             android:layout_marginTop="10dp"
             android:text="@string/welcome_slogan" />
 
